Bug 1748408 - Allow bigger chunks in hunspell. r=bholley, a=dsmith

Some dictionaries might use more memory for some words than what we were
allowing.

Differential Revision: https://phabricator.services.mozilla.com/D135060